--- a/index.html
+++ b/index.html
@@ -59,12 +59,12 @@
   </div>
 
   <div>
-    <h2>What is Artificial Intelligence?</h2>
+    <h2 class="home"><a href="notes/2/what-is-ai.html">What is Artificial Intelligence? (A short story)</a></h2>
     <p class="meta">Gaurav Singh / October 24, 2017 / Posted in Fusion / Tagged as Fiction</p>
   </div>
 
   <div>
-    <h2>Introducing Mathscapes Research — A Vision for the technology of the Future</h2>
+    <h2 class="home"><a href="notes/1/introducing-mathscapes-research.html">Introducing Mathscapes Research — A Vision for the technology of the Future</a></h2>
     <p class="meta">Gaurav Singh / June 14, 2016 / Posted in General</p>
   </div>
   </ul>
