added link for note

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
   </div>
 
   <div>
-    <h2>Prime Numbers as Building Blocks</h2>
+    <h2 class="home"><a href="notes/3/prime-numbers-as-building-blocks.html">Prime Numbers as Building Blocks</a></h2>
     <p class="meta">Gaurav Singh / February 12, 2018 / Posted in Automata / Tagged as Prime Numbers</p>
   </div>
 
