--- a/notes/3/prime-numbers-as-building-blocks.html
+++ b/notes/3/prime-numbers-as-building-blocks.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8" />
-		<link rel="stylesheet" href="css/normalize.css">
-		<link rel="stylesheet" href="css/main.css">
+		<link rel="stylesheet" href="https://mathscapes.xyz/css/normalize.css">
+		<link rel="stylesheet" href="https://mathscapes.xyz/css/main.css">
 		<title>Prime Numbers as Building Blocks</title>
 	</head>
 <body>
