--- a/index.html
+++ b/index.html
@@ -44,12 +44,12 @@
   </div>
 
   <div>
-    <h2>Effect of Fiber Volume Fraction on Composite Response under Ballistic Impact load</h2>
+    <h2 class="home"><a href="notes/5/effect-of-fiber-volume-fraction.html">Effect of Fiber Volume Fraction on Composite Response under Ballistic Impact load</a></h2>
     <p class="meta">Rahul Singh / October 18, 2018 / Posted in Assembly / Tagged as Damage Mechanics</p>
   </div>
 
   <div>
-    <h2>A Micromechanic-based approach towards the Response of Fiber-reinforced Composite Laminates under ballistic impact and blast loading</h2>
+    <h2 class="home"><a href="notes/4/a-micromechanic-based-approach-towards-the-response-of-fiber-reinforced.html">A Micromechanic-based approach towards the Response of Fiber-reinforced Composite Laminates under ballistic impact and blast loading</a></h2>
     <p class="meta">Rahul Singh / June 21, 2018 / Posted in Assembly / Tagged as Damage Mechanics</p>
   </div>
 
