--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   <h4>Latest at Mathscapes</h4>
   
   <div>
-    <h2 class="home"><a href="#">Building Sigmoid — Open Toolkit for Teaching AI in K-12</a></h2>
+    <h2 class="home"><a href="notes/7/building-sigmoid.html">Building Sigmoid — Open Toolkit for Teaching AI in K-12</a></h2>
     <p class="meta">Simran Singh / September 18, 2019 / Posted in Experience / Tagged as Teaching, K-12, AI</p>
   </div>
 
