--- a/notes/2/what-is-ai.html
+++ b/notes/2/what-is-ai.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8" />
-		<link rel="stylesheet" href="https://mathscapes.xyz/css/normalize.css">
-		<link rel="stylesheet" href="https://mathscapes.xyz/css/main.css">
+		<link rel="stylesheet" href="../mineral/normalize.css">
+		<link rel="stylesheet" href="../mineral/style.css">
 		<title>What is Artificial Intelligence? (A Short story)</title>
 	</head>
 <body>
