test drive external css

--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="mineral/normalize.css">
-  <link rel="stylesheet" href="mineral/style.css">
+  <link rel="stylesheet" href="https://github.com/mathscapes/mineral/raw/master/normalize.css">
+  <link rel="stylesheet" href="https://github.com/mathscapes/mineral/raw/master/style.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -44,7 +44,7 @@
   </div>
 
   <div>
-    <h2 class="home"><a href="notes/5/effect-of-fiber-volume-fraction.html">Effect of Fiber Volume Fraction on Composite Response under Ballistic Impact load</a></h2>
+    <h2 class="home"><a href="https://mathscapes.github.io/volumefraction/abstract.html">Effect of Fiber Volume Fraction on Composite Response under Ballistic Impact load</a></h2>
     <p class="meta">Rahul Singh / October 18, 2018 / Posted in Assembly / Tagged as Damage Mechanics</p>
   </div>
 
