--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link rel="apple-touch-icon" href="icon.png">
   <!-- Place favicon.ico in the root directory -->
 
-  <link rel="stylesheet" href="https://github.com/mathscapes/mineral/raw/master/normalize.css">
-  <link rel="stylesheet" href="https://github.com/mathscapes/mineral/raw/master/style.css">
+  <link rel="stylesheet" href="https://mathscapes.github.io/mineral/normalize.css">
+  <link rel="stylesheet" href="https://mathscapes.github.io/mineral/style.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
