update css links

--- a/notes/4/a-micromechanic-based-approach-towards-the-response-of-fiber-reinforced.html
+++ b/notes/4/a-micromechanic-based-approach-towards-the-response-of-fiber-reinforced.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8" />
-		<link rel="stylesheet" href="../mineral/normalize.css">
-		<link rel="stylesheet" href="../mineral/style.css">
+		<link rel="stylesheet" href="https://mathscapes.github.io/mineral/normalize.css">
+		<link rel="stylesheet" href="https://mathscapes.github.io/mineral/style.css">
 		<title>A Micromechanic-based approach towards the Response of Fiber-reinforced Composite Laminates under ballistic impact and blast loading</title>
 	</head>
 <body>
