--- a/notes/5/effect-of-fiber-volume-fraction.html
+++ b/notes/5/effect-of-fiber-volume-fraction.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta charset="utf-8" />
-		<link rel="stylesheet" href="../mineral/normalize.css">
-		<link rel="stylesheet" href="../mineral/style.css">
+		<link rel="stylesheet" href="https://mathscapes.github.io/mineral/normalize.css">
+		<link rel="stylesheet" href="https://mathscapes.github.io/mineral/style.css">
 		<title>Effect of Fiber Volume Fraction on Composite Response under Ballistic Impact load</title>
 	</head>
 <body>
