--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </div>
 
   <div>
-    <h2>Discoverdrome: Reimagining Learning Spaces for 2101</h2>
+    <h2 class="home"><a href="">Discoverdrome: Reimagining Learning Spaces for 2101</a></h2>
     <p class="meta">Simran Singh / September 9, 2019 / Posted in Fusion / Tagged as Future, Learning Spaces</p>
   </div>
 
