--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <link rel="stylesheet" href="https://mathscapes.github.io/mineral/normalize.css">
-  <link rel="stylesheet" href="https://mathscapes.github.io/mineral/style.css">
+  <!-- <link rel="stylesheet" href="https://mathscapes.github.io/mineral/normalize.css">
+  <link rel="stylesheet" href="https://mathscapes.github.io/mineral/style.css"> -->
 
   <meta name="theme-color" content="#fafafa">
 </head>
